# agentfortress

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: pyproject.toml  setup.py
cli/agentshield_cli/: __init__.py  main.py
cli/agentshield_cli/commands/: alerts.py  compliance.py  config.py  export.py  forensics.py  hunt.py  init.py  intel.py  policies.py  replay.py  sandbox.py  scan.py  sessions.py  status.py  users.py
cli/agentshield_cli/output/: formatters.py  spinner.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
docs/: architecture.md  awesome-lists.md  deployment.md  forensics.md  mitre-mapping.md  policies.md  quickstart.md  sdk-reference.md  server-api.md  threat-hunting.md  threat-model.md
docs/blog/: introducing-agentfortress.md
docs/enterprise/: compliance.md  rbac.md  sso-setup.md
docs/integrations/: datadog.md  pagerduty.md  slack.md  splunk.md
docs/sdk/: ml-detection.md  sandbox.md  testing.md
examples/attack_scenarios/: data_exfil_demo.py  jailbreak_demo.py  prompt_injection_demo.py
infra/: docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml
sdk/: pyproject.toml  setup.py
sdk-js/: package.json  test-advanced.ts
sdk-ruby/: agentfortress.gemspec
server/: config.py  main.py  requirements.txt  websocket.py
tests/: conftest.py
threat-intel/: README.md
(+277 files in other folders)
